[package]
name = "ansi-color-codec"
authors = ["Richard Neumann <mail@richard-neumann.de>"]
description = "Encode bytes as ANSI background colors"
license = "MIT"
homepage = "https://github.com/conqp/ansi-color-codec/"
repository = "https://github.com/conqp/ansi-color-codec/"
readme = "../README.md"
documentation = "https://docs.rs/ansi-color-codec"
keywords = ["ANSI", "color", "encoding"]
categories = ["encoding"]
version = "1.0.0"
edition = "2024"
exclude = [
    ".gitignore",
    "input.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = "0.8"

[lints]
workspace = true