[package]
name = "ansi-color-codec"
authors = ["Richard Neumann <mail@richard-neumann.de>"]
description = "Encode bytes as ANSI background colors"
license = "MIT"
homepage = "https://github.com/conqp/ansi-color-codec/"
repository = "https://github.com/conqp/ansi-color-codec/"
readme = "../README.md"
documentation = "https://docs.rs/ansi-color-codec"
keywords = ["ANSI", "color", "encoding"]
categories = ["encoding", "no-std", "no-std::no-alloc"]
version = "3.0.0"
edition = "2024"
exclude = [
    ".gitignore",
    "input.txt",
]

[lints]
workspace = true